# openschema_postgres_utils

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
app/: main.cpp
docker-iviso/: Dockerfile  build.sh  createExtensions.sh  run.sh
include/: postgres_utils.h
include/component/: AppComponent.hpp  DatabaseComponent.hpp
include/db/: UserDb.hpp  openSchemaDb.hpp
include/dto/: CameraDto.hpp  CameraRigDto.hpp  ConfigDto.hpp  ImuDto.hpp  PoseGraphDto.hpp  SensorDto.hpp  SensorTypes.hpp  UserDto.hpp  VertexDto.hpp
include/types/: Point.hpp
sql/: 001_init.sql  002_fill.sql  db_schema_postGIS_fixed.sql  db_schema_postGIS_fixed_ernst.sql
src/: postgres_utils.cpp
src/openschema_alchemy/: example.py  example_dobl_maplab.py  lane_map_json_io.py  lane_map_json_to_db.py  lidar_karte_to_db.py  maplab_csv_to_db.py  openschema_gui.py  openschema_loader.py  openschema_roi_editor.py  openschema_schema_pointcloud_exporter.py  openschema_schema_viewer_gui.py  openvslam_db_to_msgpack.py  openvslam_interface.py  openvslam_msgpack_to_db.py
src/openschema_alchemy/maplab/: csv_io.py  db_io.py  maplab_csv_io.py  proto_io.py  summary_map.py  vi_map.py
src/openschema_alchemy/model/: __init__.py
src/openschema_alchemy/openVSLAM_io/: __init__.py
src/openschema_alchemy/openschema_utils/: __init__.py
src/openschema_alchemy/vi_map/: __init__.py
src/types/: Point.cpp
tests/: CMakeLists.txt  test_utils.cpp
(+29 files in other folders)
