[metadata]
name = openschema_alchemy
version = 0.0.1
author = AIT
author_email = markus.hofstaetter@ait.ac.at
description = [WIP]
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wallner90/openschema_postgres_utils
# project_urls =
#     Bug Tracker = https://gitlab-intern.ait.ac.at/as/ml/radiate-dataset/ait_radiate_dataset_tools/-/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Database
    # Topic :: Scientific/Engineering :: Image Processing
    Topic :: Software Development :: Libraries :: Python Modules
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    PyYAML
    tqdm
    SQLAlchemy>=1.4.37
    GeoAlchemy2>=0.12.1
    GeoPandas 
    fiona 
    pyproj 
    rtree 
    shapely

[options.extras_require]
# opencvhl =
#     opencv-python-headless>=3.2
# opencv =
#     opencv-python>=3.2
tests = 
    pytest
[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
#     ait_radiate_splitcvyamls = openschema_alchemy.cli.ait_radiate_splitcvyamls:main
